--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-	  <meta charset="utf-8" />
-	  <meta name="viewport" content="width=device-width, initial-scale=1" />
-	  <meta name="description" content="Image Search App">
-	  <title>Image Search</title>
-	</head>
-	<body>
-	  <div id="root"></div>
-	  <script src="./bundle.js"></script>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Image Search App" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#4285f4" />
+    <title>Image Search</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="./bundle.js"></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+          navigator.serviceWorker.register("serviceWorker.js").then(
+            function (registration) {
+              // Registration was successful
+              console.log(
+                "ServiceWorker registration successful with scope: ",
+                registration.scope
+              );
+            },
+            function (err) {
+              // registration failed :(
+              console.log("ServiceWorker registration failed: ", err);
+            }
+          );
+        });
+      }
+    </script>
+  </body>
 </html>
